CHANGELOG RoundCube Webmail
---------------------------

2008/09/16 (alec)
----------
- Reduced memory footprint when forwarding attachments (#1485345)
- Fix inline images handling when replying/forwarding html messages
- Allow and use spellcheck attribute for input/textarea fields (#1485060)

2008/09/15 (thomasb)
----------
- Redesign of the identities settings (#1484042)
- Add config option to disable creation/deletion of identities (#1484498)

2008/09/15 (alec)
----------
- Added 'sendmail_delay' option to restrict messages sending interval (#1484491)

2008/09/12 (alec)
----------
- Added vertical splitter for folders list resizing
- Added possibility to view all headers in message view
- Fixed splitter drag/resize on Opera (#1485170)
- Fixed quota img height/width setting from template (#1484857)

2008/09/12 (thomasb)
----------
- Refactor drag & drop functionality. Don't rely on browser events anymore (#1484453)
- Insert "virtual" folders in subscription list (#1484779)
- Added link to open message in new window

2008/09/05 (thomasb)
----------
- Enable export of address book contacts as vCard
- Respect Content-Location headers in multipart/related messages according to RFC2110 (#1484946)
- Applied mime_decode patch by David Lublink
- Allowed max. attachment size now indicated in compose screen (#1485030)
- Also capture backspace key in list mode (#1484566)
- Allow application/pgp parts to be displayed (#1484753)
- Correctly handle options in mailto-links (#1485228)
- Immediately save sort_col/sort_order in user prefs (#1485265)

2008/09/04 (alec)
----------
- Truncate very long (above 50 characters) attachment filenames when displaying
- Support \" and \\ in quoted strings when parsing BODYSTRUCTURE (mime.inc)
- Allow 'readonly' atributes in input and textarea (#1485312)

2008/09/03 (thomasb)
----------
- Allow to auto-detect client language if none set (#1484434)
- Auto-detect the client timezone (user configurable)

2008/09/03 (alec)
----------